# planner-ai-platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  ROADMAP.md  errors.md  schema-v0.md
docs/decisions/: ADR-0001-phase1.md  ADR-0002-phase4-ai-expand.md
eval/suites/dev/: lint_v0.yaml  smoke.yaml
examples/: basic-plan.yaml  expand-collision-expected.yaml  expand-collision-input.yaml  expand-expected.yaml  expand-input.yaml  expand-reconcile-input.yaml  expand-reconcile-scope-safe.yaml  invalid-bad-type.yaml  invalid-cycle.yaml  invalid-duplicate-id.yaml  invalid-empty-dod.yaml  invalid-missing-field.yaml  invalid-missing-owner.yaml  invalid-unknown-dep.yaml  invalid-unreachable.yaml  templates.yaml
planner_agent/: cli.py
planner_agent/core/: apply.py  contracts.py  eval.py  gates.py  llm.py  orchestrator.py  prompts.py  repo.py  repomap.py  worktree.py
planner_ai_platform/: __main__.py  cli.py
planner_ai_platform/core/: errors.py  model.py
planner_ai_platform/core/ai/: apply_patch.py  contracts.py  openai_client.py  orchestrator.py
planner_ai_platform/core/expand/: __init__.py  expand_plan.py  template_config.py
tests/: test_ai_expand_apply_patch.py  test_ai_expand_contracts.py  test_ai_expand_orchestrator.py  test_ai_expand_schema_openai_strict.py  test_cli_ai_expand_no_changes.py  test_cli_ai_expand_no_key.py  test_cli_lint.py  test_cli_lint_json.py  test_cli_lint_sdf_v0.py  test_cli_templates.py  test_cli_templates_file.py  test_cli_validate.py  test_cli_validate_json.py  test_expand.py  test_expand_edge_cases.py  test_expand_merge_mode.py  test_expand_reconcile_mode.py  test_expand_reconcile_scope_safe.py  test_expand_template_file.py  test_expand_templates.py  test_load_plan.py  test_planner_agent_model_routing.py  test_planner_agent_no_key.py  test_validate_plan.py
(+3 files in other folders)
