[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planner-ai-platform"
version = "0.1.0"
description = "Planner AI platform: schema, validator, linter, expansion engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Patrick"}]
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
planner = "planner_ai_platform.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["planner_ai_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
